--- a/02-antecedentes.Rmd
+++ b/02-antecedentes.Rmd
@@ -49,25 +49,30 @@ De lo anterior, se desprende un segunda característica esencial de esta vrarian
 
 ### Individidualismo-Colectivismo como una dimensión de la cultura
 
-- La forma más común en que se ha abordado el fenómeno del individualismo viene de la psicología cultural y, particularmente, de la comparación entre culturas.
-- Se suele conceptualizar, de tal forma, en par junto al colectivismo. Habrían culturas - y la gran mayoría de las veces, culturas es igual a países - individualistas, y otras colectivistas.
-- Tanto el individualismo como el colectivismo son conceptos de larga tradición intelectual. Con todo, su uso actual tuvo un gran auge a parti de 1980 con los estudios de Hofstede sobre la cultura laboral en trabajadores de 39 países de la empresa IBM: (Oyserman, 2002)
-  - Hofstede definió 4 grandes dimensiones de la cultura: "distancia de poder", "masculinidad", "aversión a las incertidumbre", e "individualismo". Está última ha sido la que más atención ha captado. (Brewer, 2007)
-  - Para Hofstede, Individualismo-Colectivismo, a nivel cultural, conforman los dos polos de un único espectro (Oyserman, 2002). Las sociedades individualistas se caracterizan por lazos poco estrechos entre individuos, y en de cada quien se espera que se haga cargo de si mismo y de su familia inmediata. Sociedades colectivistas, en tanto, se caracterizan porque sus miembros están integrados desde su nacimiento a grupos fuertemente cohesionados, que los protegen a lo largo de su vidas en cambio por lealtad incuestionada (Yoon, 200)
-- A pesar de que el propio Hofstede advierte que estas definiciones aplican 1) a un nivel cultural, y no al individual; y 2) son procesos dinámicos en que las culturas pueden transformarse -- estás recomendaciones no siempre han sido seguidas por los investigadores que han retomado está definición (Oyserman, 2002).
-- Para hacerse cargo del fenómeno a nivel individual se han elaborado conceptualizaciones alternativas: Por ejemplo, la idea del *self-construal*, o la idea de si las personas se conciben a sí mismas de forma independiente o interdependiente de sus grupos. Además, está propuesta se diferencia de la Hofstede en que es un constructo bidimensional. Ahora bien, pese a que se ha insistido que el *self-construal* y el individualismo-colectivismo son fenómenos diferentes, su operacionalización muchas veces se intercepta. Por lo demás, se mantiene una interpretación más o menos explícita que relaciona una concepción independiente con culturas individualistas. 
-- También se ha vuelto popular la conceptualización que distingue dimensiones horizontales y verticales de individualismo y colectivismo. El colectivismo horizontal se caracteriza por la igualdad y la cooperación entre miembros del grupo; el colectivismo vertical valora el deber hacia el grupo en función al lugar en la jerarquía e que su ubique la persona; El individualismo horizontal valora la autonomía y la unicidad; El individualismo vertical, en tanto, valora la competencia, el logro y la jerarquía entre individuos (Méndez, 2008). Pese a que Triandis parece estar pensando en una conceptualización para el fenómeno a nivel cultural (Méndez, 2008), nuevamente suele usarse este tipo de escalas para describir diferencias entre individuos. 
-- De tal modo, el uso de individualismo-colectivismo ha sido criticado por su falta de claridad conceptual, calificandolo como un concepto *catch-all*, que se usa por defecto para explicar diferencias culturales:
-  - Se observa acá una dimensión normativa: El individualismo se ha entendido como una dimensión esencial de la cultura estadounidense. También se ha asociado a la modernidad y al desarrollo (Voronov; Wang). Individualismo, así, suele tener una connotación positiva, mientras que colectivismo una negativa (moemeka2018), sobretodo en Estados Unidos y otros países anglosajones. De ahí que no sea de extrañar que la diferencia de individualismo y colectivismo puedan recordar, por ejemplo, las distinciones sociológicas clásicas entre sociedad moderna y sociedad tradicional; sociedad y comunidad; solidaridad orgánica y solidaridad mecánica. 
-  - La falta claridad conceptual se puede observar en el estudio de Oyserman, quien a través de un análisis de contenido a las escalas más utilizadas, concluye que individualismo puede referirse a has 6 cosas distintas (independencia, logros, competencia, unicidad, autoconocimiento y comunicación directa); mientras que colectivismo a otras 8 (relaciones, pertenencia, deber, armonía, búsqueda de consejos, contextualidad, jerarquía, grupos).
-  - Brewer va más allá, indicando que en realidad ni siquiera hay verdadera simetría en las formas en que individualismo y colectivismo están operacionalizados: Así, mientras que los ítems para medir el primero suelen referirse a la identida y la agencia de los individuos; el segundo se suele medir como un sistema de valores. 
-  - También se ha puesto atención a la falta de claridad de quiénes son los colectivos del colectivismo, no haciendo una clara distinción entre grupo, colectivo y comunidad. 
-    - Moemeka ha planteado que más que hablar de colectivismo se debería hablar de comunalismo. Los colectivos se forman por elección, de ahí que no haya verdadera contradicción entre colectivismo e individualismo. Por ejemplo, sindicatos y otros movimientos sociales serían colectivos que tienen mayor presencia en sociedades individualistas. 
-    - Para Brewer, las escalas analizadas suelen medir relaciones interpersonales, y propone distinguir está dimensión de la colectiva (que lo entiende a grupos enteros, religiosos, étnicos o nacionales)
-    - Este giro permitiría explicar las "anomalías" observadas en estos estudios:
-      - A veces, los individualistas puede ser tanto o más colectivistas que los colectivistas (Oyserman)
-      - Muchas veces, los colectivistas actúan de manera individualista (Vornov)
-      - Chile es un claro ejemplo. El colectivismo en Chile es alto. Más alto que en Corea del Sur, incluso ¿Implica esto que somos una sociedad colectivista? Lo cierto es que los niveles de individualismo en Chile son más altos que en Estados Unidos y que en Noruega. 
+El fenómeno del individualismo ha sido abordado principalmente desde la psicología cultural, particularmente, de la comparación entre culturas, y generalmente en conjunto y oposición al colectivismo. Desde este punto de vista, de tal modo, existirían culturas (y, se debe notar, cultura se entiende casi siempre como sinónimo de países) que son individualista y otras que son colectivistas.
+
+Los conceptos de individualismo y colectivismo tienen un larga tradición intelectual, pero su auge actual se remonta a los estudios de Hofstede sobre la cultura laboral en trabajadores de IBM en 39 países durante la década de 1980 [@oyserman2002]. Hofstede definió cuatro dimensiones culturales: "distancia de poder", "masculinidad", "aversión a la incertidumbre" e "individualismo", con esta última captando la mayor atención de los investigadores [@brewer2007]. 
+
+Desde la conceptualización de Hofstede, Individualismo-Colectivismo -- definidos a un nivel cultural -- conforman los dos polos de un único espectro [@oyserman2002]. Las sociedades individualistas se caracterizan por lazos poco estrechos entre individuos, de quienes se espera se hagan cargo de si mismos y dde su familia inmediata. La sociedades colectivistas, en tanto, se caracterizar porque sus miembros están integrados desde su nacimiento a grupos fuertemente cohesionados que los protegen a lo largo de sus vida a cambio de una lealtad incuestionada [@yoon2010]. 
+
+A pesar de que el propio Hofstede advierte que estas definiciones aplican 1) a un nivel cultural, pero no al individual; y 2) son procesos dinámicos en que las culturas pueden transformarse, estás recomendaciones no siempre han sido seguidas por los investigadores que han retomado esta perspectiva. Frente a esto, se han hecho intentos de elaborar conceptualizaciones alternativas, siendo la del *self-costrual* [@cross2011] una de las más populares. *Self-construal*, que puede ser traducido al español como autoconstrucción o autoconcepción, se refiere a las formas en que el individuo se concibe a sí mismo, ya sea de forma independiente o interdependiente sus grupos. Esta propuesta se diferencia de la de Hofstede en que es un constructo bidimensional. Ahora bien, pese a que se ha insistido que el *self-construal* y el individualismo-colectivismo son fenómenos diferentes, su operacionalización muchas veces se intercepta [@cross2011]. Por lo demás, se mantiene una interpretación más o menos explícita que relaciona una concepción independiente con culturas individualistas [@cross2011;@voronov2002]
+
+Por otro lado, el uso de individualismo-colectivismo ha sido criticado por su falta de claridad conceptual, calificandolo como un concepto *catch-all*, que se ha por defecto para explicar diferencias culturales [@voronov2002]. Subyace aquí una dimensión normativa: El individualsimo se ha entendido como una dimensión esencial de la cultura estadounidense y anglosajana, y se asocia constantemente a la modernidad y al desarollo [@voronov2002; @wang2010]. Individualismo, así, suele tener una connotación positiva; colectivismo, una negativa [@moemeka1998], sobre todo en Estados Unidos y otros países anglosajones. De ahí que no sea de extrañar que individualismo y colectivismo puedan recordar, por ejemplo, las distinciones de la sociología clásica entre sociedad moderna y sociedad tradicional; sociedad y comunidad; o solidaridad orgánica y solidaridad mecánica. 
+
+Esta falta de claridad conceptual queda patente en el metaestudio de Oyserman y colegas [-@oyserman2002], quienes a través de un análisis de contenido a las escalas más utilizadas para medir estos fenómenos puede referirse a hasta 6 cosas distintas (independencia, orientación al logro, competencia, unicidad, autoconocimiento y comunicación directa); mientras que colectivismo a otras 8 (relaciones, pertenencia, deber, armonía, búsqueda de consejo, contextualidad, jerarquía y grupos). 
+
+Brewer y Chen [@brewer2007] van más allá, indicando que en realidad ni siquiera hay verdadera simetría en las formas en que individualismo y colectivismo están operacionalizados: Así, mientras que los ítem para medir el primero suelen referirse a la identidad y la agencia de los individuos; el segundo se suele medir como un sistema de valores. 
+
+También se ha puesto atención a la falta de claridad de quiénes son los colectivos del colectivismo, no haciendo una clara distinción entre grupos, colectivos y comunidades. Un ejemplo de esta indefinición es el problema del familiarismo: La familia, de alguna forma u otra, se ha integrado en las definiciones y operacionalizaciones tanto de individualismo como de colectivismo [@oyserman2002]. 
+
+Para Moemeka [-@moemeka1998], los colectivos se forman por elección mientras que las comunidades son preexistentes a las personas. De ahí que no haya verdadera contradicción entre colectivismo e individualismo (por ejemplo, sindicatos u otros movimientos sociales son colectivos que tienen mayor preeminencia en sociedades individualistas), y que Moemeka apunte a que más que colectivismo se debería hablar de comunalismo. 
+
+Con todo, Brewer y Chen [@brewer2007], mediante un metanalisis, concluyen que las escalas más populares no miden comunidades, según lo definido por Moemeka, sino relaciones interpersonales. Frente a esto, proponen distinguir está dimensión de la colectiva propiamente tal, que se referiría a grupos enteros, ya se de origen étnicos, religiosos o nacionales. 
+
+Estas brechas conceptuales podrían explicar las "anomalías" observadas en varios de estos estudios, como que los individualistas pueden ser tanto o más colectivistas que los colectivistas [@oyserman2002], o que en determinados contextos los colectivistas actúan de manera individualista [@voronov2002]. A nivel agregado, Chile podría considerarse como un claro ejemplo de estas incongruencias: Tradicionalmente entendida como una sociedad colectivista [@rojas2008], el colectivismo en Chile es alto [@oyserman2002], incluso más que en otras sociedades típicamente colectivistas como Corea del Sur. Pese a esto, los niveles de individualismo en Chile pueden ser incluso más altos que los observados en Estados Unidos [@oyserman2002] o Noruega [@kolstad2009].
+
+Esto abre la pregunta de si Chile realmente es una sociedad colectivista, y si no lo es, ¿hasta que punto es que una sociedad individualista?
+
 
 ### Individualismo desde la Sociología del Individuo
 
