--- a/tesis.bib
+++ b/tesis.bib
@@ -196,6 +196,20 @@
   langid = {english}
 }
 
+@article{brewer2007,
+  title = {Where ({{Who}}) {{Are Collectives}} in {{Collectivism}}? {{Toward Conceptual Clarification}} of {{Individualism}} and {{Collectivism}}.},
+  shorttitle = {Where ({{Who}}) {{Are Collectives}} in {{Collectivism}}?},
+  author = {Brewer, Marilynn B. and Chen, Ya-Ru},
+  year = {2007},
+  journal = {Psychological Review},
+  volume = {114},
+  number = {1},
+  pages = {133--151},
+  issn = {1939-1471, 0033-295X},
+  urldate = {2023-07-24},
+  langid = {english}
+}
+
 @techreport{cadem2023,
   title = {Encuesta {{Plaza P\'ublica}}. {{Cuarta Semana}} de {{Febrero}}},
   shorttitle = {Cadem},
@@ -578,6 +592,20 @@
   langid = {english}
 }
 
+@article{komarraju2008,
+  title = {Horizontal and Vertical Dimensions of Individualism-Collectivism: {{A}} Comparison of {{African Americans}} and {{European Americans}}.},
+  shorttitle = {Horizontal and Vertical Dimensions of Individualism-Collectivism},
+  author = {Komarraju, Meera and Cokley, Kevin O.},
+  year = {2008},
+  journal = {Cultural Diversity and Ethnic Minority Psychology},
+  volume = {14},
+  number = {4},
+  pages = {336--343},
+  issn = {1939-0106, 1099-9809},
+  urldate = {2023-07-24},
+  langid = {english}
+}
+
 @article{kyriacou2016,
   title = {Individualism\textendash Collectivism, Governance and Economic Development},
   author = {Kyriacou, Andreas P.},
@@ -667,6 +695,20 @@
   file = {/Users/gabrielcortes/Zotero/storage/5FMLWHYZ/Martuccelli - 2018 - Variantes del individualismo.pdf}
 }
 
+@article{moemeka1998,
+  title = {Communalism as a {{Fundamental Dimension}} of {{Culture}}},
+  author = {Moemeka, Andrew A.},
+  year = {1998},
+  month = dec,
+  journal = {Journal of Communication},
+  volume = {48},
+  number = {4},
+  pages = {118--141},
+  issn = {0021-9916, 1460-2466},
+  urldate = {2023-07-24},
+  langid = {english}
+}
+
 @article{monsivais-carrillo2019,
   title = {La Indiferencia Hacia La Democracia En {{Am\'erica Latina}}},
   author = {{Monsivais-Carrillo}, Alejandro},
@@ -721,6 +763,22 @@
   langid = {english}
 }
 
+@article{oyserman2002,
+  title = {Rethinking Individualism and Collectivism: {{Evaluation}} of Theoretical Assumptions and Meta-Analyses.},
+  shorttitle = {Rethinking Individualism and Collectivism},
+  author = {Oyserman, Daphna and Coon, Heather M. and Kemmelmeier, Markus},
+  year = {2002},
+  month = jan,
+  journal = {Psychological Bulletin},
+  volume = {128},
+  number = {1},
+  pages = {3--72},
+  issn = {1939-1455, 0033-2909},
+  urldate = {2023-07-24},
+  langid = {english},
+  file = {/Users/gabrielcortes/Zotero/storage/M4Y4HF5B/Oyserman et al. - 2002 - Rethinking individualism and collectivism Evaluat.pdf}
+}
+
 @article{pilet2023,
   title = {Who Do {{Europeans}} Want to Govern? {{Exploring}} the Multiple Dimensions of Citizens' Preferences for Political Actors in Nine {{European}} Countries},
   shorttitle = {Who Do {{Europeans}} Want to Govern?},
@@ -769,6 +827,23 @@
   file = {/Users/gabrielcortes/Zotero/storage/BGZXIWJ5/Rico et al. - 2020 - Empowered and enraged Political efficacy, anger a.pdf}
 }
 
+@article{rojas2008,
+  title = {{Evaluaci\'on del individualismo y colectivismo horizontal y vertical en la sociedad Chilena.}},
+  author = {{Rojas-M{\'e}ndez}, Jos{\'e} I. and {Couti{\~n}o-Hill}, Vilma and Bhagat, Rabi S. and Moustafa, Karen South},
+  year = {2008},
+  month = dec,
+  journal = {Multidisciplinary Business Review},
+  volume = {1},
+  number = {1},
+  pages = {36--48},
+  issn = {0718-3992},
+  urldate = {2023-07-24},
+  abstract = {This research analyzes individualism and vertical and horizontal collectivism in Chile according to Triandis (1985) typology. This is a survey-based descriptive study, with a sample of 558 administrative employees of three different organizations. Results support the idea that individualism and collectivism are not opposite dimensions, that coexist and may complement each other. The Chilean society remains collectivist but horizontal individualism is emerging and becoming more important. Both vertical and horizontal collectivism are positively related with age, years worked in the same place, and negatively associated with educational level. Women get higher ratings of horizontal individualism and men get higher vertical collectivism ratings. Using cluster analysis five different segments were found: independent collectivists, pure collectivists, idiocentric collectivists, alocentric individualists and renegades. Finally, potential causes and implications of these findings are discussed.},
+  copyright = {Derechos de autor 2020},
+  langid = {spanish},
+  file = {/Users/gabrielcortes/Zotero/storage/2XJSP73P/Rojas-Méndez et al. - 2008 - Evaluación del individualismo y colectivismo horiz.pdf}
+}
+
 @article{rudy2006,
   title = {Authoritarian Parenting in Individualist and Collectivist Groups: {{Associations}} with Maternal Emotion and Cognition and Children's Self-Esteem.},
   shorttitle = {Authoritarian Parenting in Individualist and Collectivist Groups},
@@ -795,6 +870,21 @@
   pages = {101608},
   issn = {10489843},
   urldate = {2023-06-28},
+  langid = {english}
+}
+
+@article{shulruf2007,
+  title = {Development of a {{New Measurement Tool}} for {{Individualism}} and {{Collectivism}}},
+  author = {Shulruf, Boaz and Hattie, John and Dixon, Robyn},
+  year = {2007},
+  month = dec,
+  journal = {Journal of Psychoeducational Assessment},
+  volume = {25},
+  number = {4},
+  pages = {385--401},
+  issn = {0734-2829, 1557-5144},
+  urldate = {2023-07-24},
+  abstract = {A new measurement tool for individualism and collectivism has been developed to address critical methodological issues in this field of social psychology. This new measure, the Auckland Individualism and Collectivism Scale (AICS), defines three dimensions of individualism: (a) responsibility (acknowledging one's responsibility for one's actions), (b) uniqueness (distinction of the self from the other), and (c) competitiveness (striving for personal goals is one's prime interest). The scale also defines two dimensions of collectivism: (a) advice (seeking advice from people close to one, before taking decisions) and (b) harmony (seeking to avoid conflict). The AICS avoids the need for measuring horizontal and vertical dimensions of collectivism and individualism and the confounding effect of familialism on the collectivism\textemdash individualism constructs.},
   langid = {english}
 }
 
@@ -897,6 +987,21 @@
   langid = {english}
 }
 
+@article{wang2010,
+  title = {What Collective? {{Collectivism}} and Relationalism from a {{Chinese}} Perspective},
+  shorttitle = {What Collective?},
+  author = {Wang, Georgette and Liu, Zhong-Bo},
+  year = {2010},
+  month = mar,
+  journal = {Chinese Journal of Communication},
+  volume = {3},
+  number = {1},
+  pages = {42--63},
+  issn = {1754-4750, 1754-4769},
+  urldate = {2023-07-24},
+  langid = {english}
+}
+
 @article{wu2019,
   title = {Income Inequality, Distributive Unfairness, and Support for Democracy: Evidence from {{East Asia}} and {{Latin America}}},
   shorttitle = {Income Inequality, Distributive Unfairness, and Support for Democracy},
@@ -925,6 +1030,14 @@
   urldate = {2023-06-28},
   abstract = {A growing body of evidence suggests that support for a strong non-democratic leader is driven, in part, by low economic development and economic inequality at the country level, and low income and interpersonal trust at the individual level. In the current research, we tested the hypothesis that although such a pattern predicts support for a strong non-democratic leader in democracies, it should produce decreased support for a strong non-democratic leader in non-democracies (where the presence of such leaders is the political status quo). Using three waves of World Values Survey data (2005-2020), as predicted, we found that in democracies, low economic development, high inequality, and low interpersonal trust predicted support for a strong non-democratic leader. However, in non-democracies, support for a strong non-democratic leader was higher in more economically developed countries and among individuals with higher social trust. These results contradict modernization theory's proposition that development promotes support for democratic rule and suggest that economic development reinforces support for the existing political system.},
   file = {/Users/gabrielcortes/Zotero/storage/XR9383QY/Xuereb et al. - 2021 - Social and economic determinants of support for a .pdf}
+}
+
+@phdthesis{yoon2010,
+  type = {A Dissertation for the Degree of {{Doctor}} of {{Philosophy}} ({{Political Science}})},
+  title = {Political {{Culture}} of {{Individualism}} and {{Collectivism}}},
+  author = {Yoon, Kwang-Il},
+  year = {2010},
+  school = {Universidad de Michigan}
 }
 
 @article{zhai2022,
